2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkInt.decls:	[Bugs 220600, 220690]: Comment that
	  TkWinChildProc is exported through the stubs table
	  since 8.5.9

2009-12-11  Donal K. Fellows  <dkf@users.sf.net>

	* library/tk.tcl (tk::ScreenChanged): [Bug 2912473]: Stop problems
	caused by display names with a double colon in.

2009-12-10  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/ttkscale.tcl: Added demo of [ttk::scale] widget.

2009-12-09  Andreas Kupries  <andreask@activestate.com>

	* library/safetk.tcl (::safe::loadTk): [Bug 2902573]: Fixed access to
	the cleanupHook of the safe base. The code used the old internal
	commands which have been removed since 2009-12-09. See Tcl's
	ChangeLog.

2009-12-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkColor.c (Tk_GetColorByValue): [Bug 2911570]: Ensure that
	hash keys of color values are zeroed first, so that they hash properly
	on 64-bit systems (where X structures are not tightly packed).

2009-12-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bug 2864685]: Backported window manager hinting
			   update from HEAD

2009-12-06  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* macosx/tkMacOSXFont.c (GetFontFamilyName): [Bug 2548661]: Merge fix
	from HEAD (1.44).

2009-12-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/xpTheme.tcl:    Fix selection of treeview rows on
	* library/ttk/vistaTheme.tcl: Windows XP and Vista.

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/GetHINSTANCE.3:	Correct mentioned header file
	* win/tkWinInt.h:	[Bugs 220600, 220690]: Make TkWinChildProc
	* generic/tkInt.decls:	available in private stub table.
	* generic/tkIntPlatDecls.h: (regenerated)
	* generic/tkStubInit.c:	(regenerated)

2009-11-25  Stuart Cassoff <stwo@users.sf.net>

	* unix/tcl.m4:		[Patch 2892871]: Remove unneeded
	*			AC_STRUCT_TIMEZONE.
	* unix/configure:	Regenerated with autoconf-2.59.
